apps/kite/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: kite
    namespace: observability
spec:
    replicas: 1
    selector:
        matchLabels:
            app: kite
    template:
        metadata:
            labels:
                app: kite
        spec:
            serviceAccountName: cluster-admin-sa
            nodeSelector:
                kubernetes.io/hostname: "realtong-server"
            containers:
                - image: ghcr.io/zxh326/kite:v0.12.2
                  imagePullPolicy: IfNotPresent
                  name: kite
                  livenessProbe:
                    httpGet:
                      path: /healthz
                      port: 8080
                    initialDelaySeconds: 10
                    periodSeconds: 10
                  readinessProbe:
                    httpGet:
                      path: /health
                      port: 8080
                    initialDelaySeconds: 10
                    periodSeconds: 10
                  resources:
                      limits:
                          cpu: 1000m
                          memory: 512Mi
                      requests:
                          cpu: 100m
                          memory: 128Mi
                  ports:
                      - containerPort: 8080
                        protocol: TCP
