apps/kite/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: kite
    namespace: observability
    labels:
        app: kite
spec:
    ports:
        - port: 8080
          targetPort: 8080
    selector:
        app: kite
